@@ -2079,11 +2079,7 @@ penn_fprintf(PENNFILE *f, const char *fmt, ...)
       char line[BUFFER_LEN * 2];
 
       va_start(ap, fmt);
-#ifdef HAVE_VSNPRINTF
-      r = vsnprintf(line, sizeof line, fmt, ap);
-#else
-      r = vsprintf(line, fmt, ap);
-#endif
+      r = my_vsnprintf(line, sizeof line, fmt, ap);
       va_end(ap, fmt);
       if (r > -1)
         OUTPUT(gzputs(f->handle.g, line));
